Fixing tasks with long name get truncated visually, don't overflow.

--- a/task_list.css
+++ b/task_list.css
@@ -1,5 +1,4 @@
 #taskContainer{		
-	
 }
 #taskRowTemplate{
 	display: none;
@@ -12,7 +11,6 @@
 
 .taskRow{		
 	border:1px solid #CCC;
-	height:50px;		
 	font-family:'Arial', serif;
 	border:5px solid #FFF;
 	background-color:#FFD;
@@ -20,44 +18,47 @@
 	box-shadow: 2px 2px 4px #888888;
 	position:relative;
 	cursor: pointer;
+
+
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
-.taskRowInner{
-	position:absolute;			
+.taskRowInner{			
+	padding: 8px;
 	border:3px solid #EED;
-	bottom:0;
-	top:0;
-	left:0;
-	right:0;
 }
 
 .taskComplete{
-	position: absolute;
-	left:10px;
 	border:2px solid #CCCCCC;
 	width:30px;
 	height:30px;
-	top:5px;
-
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .taskComplete img{
 	width: 30px;
 	height:30px;
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .taskLabel{
-	position: absolute;			
-	left:55px;
-	right:100px;
-	margin-top:8px;
+	display: inline-block;
 	font-weight: bold;
+	width: 70%;
+	margin: 0;
+
+	overflow: hidden;
+	text-overflow: ellipsis;
+	vertical-align: middle;
 }
 
 .taskDue{
-	position: absolute;
-	right:10px;			
-	margin-top:12px;
+	display: inline-block;
 	font-size:.8em;
+	vertical-align: middle;
 }
 
 #popContainer{
